[gd_scene load_steps=4 format=3 uid="uid://kciq7db1gx5j"]

[ext_resource type="Script" uid="uid://dwrto3oyofsky" path="res://Scenes/level.gd" id="1_6phgx"]
[ext_resource type="Script" uid="uid://cbdtos8c4maaq" path="res://Scenes/mining_gridbox.gd" id="1_tumq0"]
[ext_resource type="PackedScene" uid="uid://dsj0654ieq1op" path="res://Scenes/inventory_ui.tscn" id="5_0f350"]

[node name="Level" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6phgx")

[node name="LevelVBox" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 171.0
offset_bottom = 86.0

[node name="MiningGridbox" type="GridContainer" parent="LevelVBox"]
layout_mode = 2
size_flags_vertical = 3
columns = 2
script = ExtResource("1_tumq0")

[node name="MineCoal" type="Button" parent="LevelVBox/MiningGridbox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MineCoalBar" type="ProgressBar" parent="LevelVBox/MiningGridbox/MineCoal"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -27.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1

[node name="MineCoalTimer" type="Timer" parent="LevelVBox/MiningGridbox/MineCoal"]

[node name="MineCoalLabel" type="Label" parent="LevelVBox/MiningGridbox/MineCoal"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Coal"
horizontal_alignment = 1

[node name="MineIronOre" type="Button" parent="LevelVBox/MiningGridbox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MineIronOreBar" type="ProgressBar" parent="LevelVBox/MiningGridbox/MineIronOre"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -27.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1

[node name="MineIronOreTimer" type="Timer" parent="LevelVBox/MiningGridbox/MineIronOre"]

[node name="MineIronOreLabel" type="Label" parent="LevelVBox/MiningGridbox/MineIronOre"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Iron Ore"
horizontal_alignment = 1

[node name="GameStateLabel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -123.0
offset_bottom = 65.0
grow_horizontal = 0

[node name="EnergyLabel" type="Label" parent="GameStateLabel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "0"

[node name="DayLabel" type="Label" parent="GameStateLabel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -11.5
offset_right = 40.0
offset_bottom = 11.5
grow_vertical = 2

[node name="RentLabel" type="Label" parent="GameStateLabel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 40.0
grow_vertical = 0

[node name="EndDay" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -166.0
offset_top = -65.0
grow_horizontal = 0
grow_vertical = 0
text = "End Day"

[node name="ExpBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -131.0
offset_top = -27.0
offset_right = 131.0
grow_horizontal = 2
grow_vertical = 0
show_percentage = false

[node name="InventoryPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -152.0
offset_top = -109.0
offset_bottom = 109.0
grow_horizontal = 0
grow_vertical = 2

[node name="InventoryLabel" type="Label" parent="InventoryPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
autowrap_mode = 3

[node name="InventoryUI" parent="." instance=ExtResource("5_0f350")]
visible = false
layout_mode = 1

[node name="SceneTransitionPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -62.5
offset_right = 62.5
offset_bottom = 54.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="SceneTransitionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TraderTransition" type="Button" parent="SceneTransitionPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Trader"

[node name="SmithyTransition" type="Button" parent="SceneTransitionPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Smithy"

[connection signal="pressed" from="LevelVBox/MiningGridbox/MineCoal" to="LevelVBox/MiningGridbox" method="_on_mine_coal_pressed"]
[connection signal="timeout" from="LevelVBox/MiningGridbox/MineCoal/MineCoalTimer" to="LevelVBox/MiningGridbox" method="_on_mine_coal_timer_timeout"]
[connection signal="pressed" from="LevelVBox/MiningGridbox/MineIronOre" to="LevelVBox/MiningGridbox" method="_on_mine_iron_ore_pressed"]
[connection signal="timeout" from="LevelVBox/MiningGridbox/MineIronOre/MineIronOreTimer" to="LevelVBox/MiningGridbox" method="_on_mine_iron_ore_timer_timeout"]
[connection signal="timeout" from="LevelVBox/MiningGridbox/MineIronOre/MineIronOreTimer" to="LevelVBox/MiningGridbox" method="_on_mine_coal_timer_timeout"]
[connection signal="pressed" from="EndDay" to="." method="_on_end_day_pressed"]
[connection signal="pressed" from="SceneTransitionPanel/HBoxContainer/TraderTransition" to="." method="_on_trader_transition_pressed"]
[connection signal="pressed" from="SceneTransitionPanel/HBoxContainer/SmithyTransition" to="." method="_on_smithy_transition_pressed"]
